--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app-root"></div>
+    <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
